# customer-support-chatbot

./: Dockerfile  README.md  pyproject.toml  requirements.txt
src/: config.py  main.py  redo_embeddings.py  run_local.py  templates.py
src/schema/: message.py
src/templates/: base.html  index.html
src/tools/: embeddings.py  rag.py  source.py
src/utils/: messages.py
src/view/: main.py
