[tool.poetry]
name = "startlangchain"
version = "0.1.0"
description = ""
authors = ["sumeet <Sumeet.Mathpati@steel-eye.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain-openai = "^0.3.2"
langchain = "0.3.15"
langchain-community = "^0.3.15"
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^6.0.0"
langchain-deepseek = "^0.1.2"
langchain-ollama = "^0.2.3"
transformers = "^4.49.0"
faiss-cpu = "^1.10.0"
scikit-learn = "^1.6.1"
pypdf2 = "^3.0.1"
pypdf = "^5.4.0"
bs4 = "^0.0.2"
chromadb = "^1.0.0"
jinja2 = "^3.1.6"
python-multipart = "^0.0.20"
docx2txt = "^0.9"
fastapi = "0.115.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
